--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,8 @@
 body {
-  background-color: lightblue;
+  background-color: linen;
 }
 
 h1 {
-  color: navy;
-  margin-left: 20px;
+  color: white;
+  margin-left: 75px;
 }
-
